fix mob section on safari

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body {
   padding: 35px 0 0 0;
   position: fixed;
   top: 0;
-  bottom: 0;
+  bottom: -60px;
   background-color: white;
   z-index: 3;
   display: none;
